# MLOps-Course

./: .gitignore  GUIA_INTEGRACION_MLOPS.md  README.md
01-Intro-ML/: 02_regression_temporal_notebook.ipynb
02-Experiment-Tracking/: README.md
02-Experiment-Tracking/exercises/: README.md  ejercicio_01_agregar_tracking.ipynb  ejercicio_02_model_registry.ipynb  ejercicio_02_model_registry_solucion.ipynb
02-Experiment-Tracking/notebooks/: 00_data_preparation.ipynb  03_mlflow_advanced.ipynb
02-Experiment-Tracking/scripts/: preprocess_data.py
03-Orchestration/: README.md
03-Orchestration/Mage-pipelines/: comparacion_orquestadores.ipynb  pyproject.toml  setup_and_run.sh  test_blocks.py
03-Orchestration/Mage-pipelines/nyc_taxi_project/data_exporters/: train_model.py
03-Orchestration/Mage-pipelines/nyc_taxi_project/data_loaders/: load_taxi_data.py
03-Orchestration/Mage-pipelines/nyc_taxi_project/transformers/: create_features.py  validate_data.py
03-Orchestration/Mage-pipelines/nyc_taxi_project/utils/: constants.py
03-Orchestration/Prefect-pipelines/ejercicio/: ejercicio_pipeline_clasificacion.ipynb
03-Orchestration/Prefect-pipelines/ejercicio_solucion/: ejercicio_resuelto.ipynb  pipeline.py
03-Orchestration/Prefect-pipelines/models/: preprocessor.b
03-Orchestration/diagrams/: generate_diagrams.py
04-Deployment/deploy/batch-deploy/: README.md  (+1 more)
05-Monitoring/: README.md
Project/: Readme.md  peer-review-template.md
markdowns/: CLASE_MAGISTRAL_WEB_SERVICE.md  GUIA_CLASE_ORQUESTACION.md  GUIA_MAGE_PASO_A_PASO.md  NOTAS_PROFESOR_WEB_SERVICE.md
(+7 files in other folders)
