# ⚠️  ESTE pyproject.toml ES INDEPENDIENTE del proyecto raiz.
# Mage tiene conflictos de dependencias con Prefect/MLflow modernos,
# por lo que se instala en un .venv-mage aislado via setup_and_run.sh.
# NO agregar esta carpeta al [tool.uv.workspace] del pyproject.toml raiz.
# NO ejecutar `uv sync` aqui directamente — usar el script.

[project]
name = "mage-nyc-taxi"
version = "0.1.0"
description = "Pipeline NYC Taxi con Mage (entorno aislado de Prefect)"
requires-python = ">=3.11"
dependencies = [
    "mage-ai>=0.9.75",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "optuna>=3.4.0",
    "mlflow>=2.10.0",
]
